--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: marvel_heroes
-description: A new Flutter project.
+description: A Marvel Heroes App
 
 publish_to: 'none'
 
-version: 1.0.0+1
+version: 0.0.1+1
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -15,15 +15,28 @@ dependencies:
     sdk: flutter
   flutter_mobx: ^2.0.3+2
   mobx: ^2.0.6+1
-  
 
 dev_dependencies:
   build_runner: ^2.1.7
-  mobx_codegen: ^2.0.5+2
   flutter_lints: ^1.0.0
+  flutter_native_splash: ^1.3.2
   flutter_test:
     sdk: flutter
+  mobx_codegen: ^2.0.5+2
 
 flutter:
 
   uses-material-design: true
+
+  assets:
+    - assets/images/
+
+flutter_native_splash:
+
+  color: "#ee2323"
+
+  image: "assets/images/marvel.png"
+
+  android_gravity: center
+
+  ios_content_mode: center
