--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,17 @@ environment:
   sdk: ">=2.15.1 <3.0.0"
 
 dependencies:
+  auto_size_text: ^3.0.0
+  awesome_stepper: ^0.1.3
+  cached_network_image: ^3.2.0
   cupertino_icons: ^1.0.2
   dio: ^4.0.4
   flutter:
     sdk: flutter
   flutter_mobx: ^2.0.3+2
+  lib_msaadev:
+    git:
+      url: https://github.com/msaadev/lib_msaadev
   mobx: ^2.0.6+1
 
 dev_dependencies:
